--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,25 +1,25 @@
 //Font family
-$--ff-primary: 'Source Sans Pro', sans-serif;
-$--ff-secondary: 'Source Code Pro', monospace;
+$ff-primary: 'Source Sans Pro', sans-serif;
+$ff-secondary: 'Source Code Pro', monospace;
 //Font weith
-$--fw-reg: 300;
-$--fw-bold: 900;
+$fw-reg: 300;
+$fw-bold: 900;
 //Colors
-$--clr-light: #fff;
-$--clr-dark: #303030;
-$--clr-accent: #16e0bd;
+$clr-light: #fff;
+$clr-dark: #303030;
+$clr-accent: #16e0bd;
 //Font size
-$--fs-h1: 3rem;
-$--fs-h2: 2.25rem;
-$--fs-h3: 1.25rem;
-$--fs-body: 1rem;
+$fs-h1: 3rem;
+$fs-h2: 2.25rem;
+$fs-h3: 1.25rem;
+$fs-body: 1rem;
 
 
 @media (min-width: 800px) {
     
-    $--fs-h1: 4.5;
-    $--fs-h2: 3.75rem;
-    $--fs-h3: 1.5rem;
-    $--fs-body: 1.125rem;
+    $fs-h1: 4.5rem;
+    $fs-h2: 3.75rem;
+    $fs-h3: 1.5rem;
+    $fs-body: 1.125rem;
     
 }
