--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -11,7 +11,11 @@ body{
     color: v.$clr-dark;
     margin: 0;
     font-family: v.$ff-primary;
-    line-height: 1.6;
+    line-height: 1.6rem;
+}
+
+section {
+    padding: 5rem 2rem;
 }
 
 img{
@@ -55,5 +59,8 @@ h3 {font-size: v.$fs-h3;}
 .section__subtitle--intro,
 .section__subtitle--about {
     background: v.$clr-accent;
+    padding: .25em 1em;
     font-family: v.$ff-secondary;
+    margin-bottom: 1em
 }
+
