--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -15,11 +15,13 @@ $fs-h3: 1.25rem;
 $fs-body: 1rem;
 
 
-@media (min-width: 800px) {
-    
+@media (min-width: 800px) {    
     $fs-h1: 4.5rem;
     $fs-h2: 3.75rem;
     $fs-h3: 1.5rem;
     $fs-body: 1.125rem;
     
+    h1 {font-size: $fs-h1 !important;}
+    h2 {font-size: $fs-h2 !important;}
+    h3 {font-size: $fs-h3 !important;}
 }
