--- a/src/scss/home/_home.scss
+++ b/src/scss/home/_home.scss
@@ -4,12 +4,20 @@
     position: relative;
 }
 
+.intro__img {
+    box-shadow: v.$bs;
+}
+
+.section__subtitle--intro {
+    display: inline-block;
+}
+
 @media (min-width: 600px){
     .intro{
         display: grid;
         width: min-content;
         margin: 0 auto;
-        //grid-column-gap: 1em;
+        grid-column-gap: 1em;
         grid-template-areas: 
             "img title"
             "img subtitle";
